@@ -31,9 +31,6 @@
 /* This should be in %eax.  */
 #define MULTIBOOT_BOOTLOADER_MAGIC		0x2BADB002
 
-/* The bits in the required part of flags field we don't support.  */
-#define MULTIBOOT_UNSUPPORTED			0x0000fffc
-
 /* Alignment of multiboot modules.  */
 #define MULTIBOOT_MOD_ALIGN			0x00001000
 
